--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "esbuild-register": "^3.3.3",
     "faker": "^6.6.6",
     "next": "12.3.1",
+    "node-mocks-http": "^1.11.0",
     "prisma": "^4.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -35,6 +36,8 @@
     "@vitejs/plugin-react": "^2.1.0",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "jest": "^29.2.1",
+    "jest-mock-extended": "^2.0.4",
     "jsdom": "^20.0.0",
     "msw": "^0.47.4",
     "prisma": "^4.4.0",
